log
Sun 10 Sep 2023 01:36:43 AM UTC: 
 tests:  0|6
total_score: 0/70
1ac0a20
Sun 10 Sep 2023 01:48:51 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
085a2eb
Sun 10 Sep 2023 01:49:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:11: error: ‘*hashMap.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |   *hashMap->buckets = buckets;
      |    ~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa1000e
Sun 10 Sep 2023 01:49:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:20: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   hashMap->buckets = buckets;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
079fb0e
Sun 10 Sep 2023 01:50:14 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
9bb3dd8
Sun 10 Sep 2023 02:02:47 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
8ca4f45
Sun 10 Sep 2023 02:04:51 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   58 |   hashMap.bucket = malloc(sizeof(Pair) * capacity);
      |           ^~~~~~
      |           buckets
hashmap.c:63:10: error: function returns address of local variable [-Werror=return-local-addr]
   63 |   return &hashMap;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ca02088
